--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Stride To Excellence - Building a new Lifestyle</title>
+<title>Stride Towards Excellence</title>
 <link rel="icon" href="images/favicon.png" type="image/png" sizes="16x16">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="iLand Multipurpose Landing Page Template">
@@ -25,7 +25,7 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-          <a class="navbar-brand page-scroll" href="#main"><img src="images/logo.png" width="80" height="30" alt="iLand" /></a> </div>
+          <a class="navbar-brand page-scroll" href="#main"><img src="images/logo.png" width="120" height="138" alt="iLand" /></a> </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
@@ -48,8 +48,8 @@
       <div class="container nopadding">
         <div class="col-md-12">
           <div class="hero-content text-center">
-            <h1 class="wow fadeInUp" data-wow-delay="0.1s">Building a new lifestyle</h1>
-            <p class="wow fadeInUp" data-wow-delay="0.2s">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+            <h1 class="wow fadeInUp" data-wow-delay="0.1s">Stride Towards Excellence</h1>
+            <p class="wow fadeInUp" data-wow-delay="0.2s" style="font-size:18px"><b>STRENGTH | AGILITY | FLEXIBILITY | ENDURANCE | RECOVERY </b></p>
             <a href="#" class="btn btn-action wow fadeInUp" style="visibility: visible; animation-name: fadeInUp;">Get Strated</a> </div>
         </div>
       </div>
@@ -59,48 +59,48 @@
       <div class="container">
         <div class="pitch-intro">
           <h1 class="wow fadeInDown" data-wow-delay="0.2s">EVERYTHING IS POSSIBLE WITH ME</h1>
-          <p class="wow fadeInDown" data-wow-delay="0.2s">Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+          <p class="wow fadeInDown" data-wow-delay="0.2s">Be it a beginner or an athelete, all you have to do is picture your future self, and we will strive to stride!!!</p>
         </div>
         <div class="col-md-12">
           <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
             <div class="pitch-icon"> <i class="ion-ios-checkmark-outline"></i> </div>
             <div class="pitch-content">
               <h1>Personal Training</h1>
-              <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
+              <p> One to one person sessions focused on strength and conditioning, fat loss, muscle gain and achieving overall fitness. </p>
             </div>
           </div>
           <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
             <div class="pitch-icon"> <i class="ion-ios-mic-outline"></i> </div>
             <div class="pitch-content">
-              <h1>Cardio Training</h1>
-              <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
-            </div>
-          </div>
-          <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
-            <div class="pitch-icon"> <i class="ion-ios-folder-outline"></i> </div>
-            <div class="pitch-content">
-              <h1>Freestyle Training</h1>
-              <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
-            </div>
-          </div>
-          <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
-            <div class="pitch-icon"> <i class="ion-ios-folder-outline"></i> </div>
-            <div class="pitch-content">
-              <h1>Sport Nutrition</h1>
-              <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
+              <h1>Yoga</h1>
+              <p> A way to relax your mind, embrace your energies and building flexibility and a fit body through yoga sessions.</p>
             </div>
           </div>
           <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
             <div class="pitch-icon"> <i class="ion-ios-folder-outline"></i> </div>
             <div class="pitch-content">
               <h1>Functional Training</h1>
-              <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
+              <p> Allows you to be more active throughout your day with our functional workouts such as Tabata and High Intensity Interval Training (HIIT). </p>
             </div>
           </div>
           <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
             <div class="pitch-icon"> <i class="ion-ios-folder-outline"></i> </div>
             <div class="pitch-content">
-              <h1>Crossfit</h1>
+              <h1>Sport Nutrition</h1>
+              <p> It's not just the workout that helps you tone the body, we believe nutrition has an equal contribution to it. Get a structured nutrition plan designed specifically for you to ace your performance. </p>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
+            <div class="pitch-icon"> <i class="ion-ios-folder-outline"></i> </div>
+            <div class="pitch-content">
+              <h1>Group Classes</h1>
+              <p> Do not feel like working out alone all the time? We provide group sessions where you can join others from your locality, and stride towards excellence together. </p>
+            </div>
+          </div>
+          <div class="col-md-4 wow fadeInDown" data-wow-delay="0.2s">
+            <div class="pitch-icon"> <i class="ion-ios-folder-outline"></i> </div>
+            <div class="pitch-content">
+              <h1>Fitness Testing</h1>
               <p> Aliquam vel euismod elit, sed suscipit est. Sed tincidunt venenatis ligula ac luctus. Fusce egestas volutpat mi sed pellentesque. </p>
             </div>
           </div>
